k3s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hangman
  namespace: hangman

spec:
  replicas: 1

  selector:
    matchLabels:
      app: hangman

  template:
    metadata:
      labels:
        app: hangman

    spec:
      containers:
        - name: hangman
          image: hangman:v1
          imagePullPolicy: Never

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "250m"
              memory: "128Mi"
