k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hangman
  namespace: hangman

spec:
  selector:
    app: hangman

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
